@@ -1,3 +1,0 @@
-list(APPEND JSC_SOURCES
-    ../os-win32/WinMain.cpp
-)
